# stag

./: .gitignore  .stag-id  BUG_FIX_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  PLAN.md  README.ja.md  README.md  pyproject.toml  request_eval_h_0_default.json  state_round_0.json
bench/: storage_bench.py
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  PLANNING_AND_RL.md  PURPOSE_AND_DESIGN.md  STATE_MODEL.md  V2_REMAINING_FIXES.md  WORKFLOW.md
docs/en/: AGENT_LOOP.md  API.md  CLI.md  CONCEPT.md  DIRECTION.md  STATE_MODEL.md
docs/ja/: AGENT_LOOP.md  API.md  CLI.md  CONCEPT.md  DIRECTION.md  EXTENSION.md  EXTENSION_FRAMEWORK.md  GIT_INTEGRATION.md  REDESIGN_GIT_NATIVE.md  REDESIGN_IMPL_PLAN.md  SIMPLE_DAG_REDESIGN_PLAN.md  SINGLE_OUTPUT_TRANSITION_PLAN.md  STATE_MODEL.md
examples/: basic_cli_loop.sh  benchmark_optimization.sh  debugging_trace.sh  demo.tape  demo_cli.tape  demo_env.sh  demo_tui.tape  generate_tui_graph.sh  kernel_example.py  parallel_agents.sh
optagent_output/: state_round_1.json
scripts/: debug_optimizer.py  e2e_test.py  seed_sample_runs.py  smoke_test.py  test_backend.py  test_diff.py  test_proposer.py  trace_optimizer.py
skills/stag-extension-inproject/: SKILL.md
skills/stag-extension-package/: SKILL.md
skills/stag-record/: SKILL.md
src/optagent/: __init__.py  batch.py
src/optagent/cli/: context.py  main.py
src/optagent/cli/commands/: derive.py  extend.py  guide.py  list.py  note.py  observe.py  plan.py  predict.py  promote.py  refresh.py  rewind.py  show.py  snapshot.py  state.py  trace.py  view.py
src/optagent/core/: __init__.py  cuts.py  dag.py  graph_view.py  manager.py  protocols.py  run.py  run_graph.py  schema.py  state.py  tree.py  types.py
src/optagent/core/run/: derive.py  handle.py  helpers.py  note.py  observe.py  plan.py  predict.py  promote.py  rewind.py  snapshot.py  state_impl.py  trace.py  view.py
src/optagent/reporting/: batch.py
src/optagent/storage/: __init__.py  jsonl.py
src/optagent/v1/: batch.py  protocol.py
src/optagent/v2/: __init__.py  action.py  bridge.py  hybrid.py  mcts.py  migrate.py  pareto.py  planner.py  policy.py  reward.py  rollout.py  state.py  value.py
src/stag/: __init__.py
src/stag/cli/: __init__.py  alias.py  append_batch.py  context.py  main.py  paths.py  payload_builder.py  workspace.py
src/stag/core/: __init__.py  append.py  cuts.py  graph_view.py  ids.py  run_graph.py  types.py
src/stag/domains/: __init__.py
src/stag/execution/: __init__.py  backend.py  evaluator.py  executor.py  sandbox.py
src/stag/ext/: __init__.py  base.py
src/stag/search/: __init__.py  beam.py  greedy.py  mcts.py
src/stag/storage/: __init__.py  _cache.py  jsonl.py  sqlite.py
src/stag/tui/: app.py  detail.py  flowchart.py  flowchart_view.py
src/stag/workflows/: __init__.py
tests/: test_core.py  test_v2_bugs.py  test_v2_core.py  test_v2_integration.py  test_v2_migration.py
tests/cli/: test_basic.py  test_branch.py  test_cherry_pick.py  test_cli_smoke.py  test_cli_sqlite_e2e.py  test_commit.py  test_commit_guard.py  test_context.py  test_cut_commands.py  test_derive.py  test_extend.py  test_git.py  test_git_namespace_cli.py  test_git_worktree.py  test_guide.py  test_hook_install.py  test_hook_post_merge.py  test_hook_post_rewrite.py  test_init_hooks.py  test_init_stag_id.py  test_list.py  test_merge.py  test_migrate.py  test_note.py  test_observed_commands.py  test_paths.py  test_plan.py  test_prediction_commands.py  test_promote.py  test_refresh.py  test_reset.py  test_revert.py  test_rewind.py  test_rewind_refresh_commands.py  test_show.py  test_show_history.py  test_snapshot.py  test_state_snapshot_commands.py  test_store_factory.py  test_sync.py  (+3 more)
tests/core/: test_branch_members.py  test_current_sha.py  test_cuts.py  test_dag.py  test_dump.py  test_run_api.py  test_schema.py
tests/core/run/: test_adopt_rewrite.py  test_cherry_pick.py  test_commit.py  test_merge.py  test_parallel_session_guard.py  test_reset.py  test_revert.py  test_verify.py
tests/core/schema/: test_branch_payload.py  test_cherry_pick_payload.py  test_merge_payload.py  test_reset_event.py  test_revert_payload.py
tests/ext/: test_registry.py
tests/storage/: test_cache.py  test_incremental_append.py  test_jsonl_store.py  test_sqlite_store.py
tests/tui/: test_app.py
tests/v1/: test_batch.py  test_core.py  test_manager.py  test_state_model.py
tests/v2/: test_code_domain.py  test_code_optimizer.py  test_code_proposer.py  test_code_smoke.py  test_v2_core.py  test_v2_migration.py
(+143 files in other folders)
