[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stag"
version = "0.1.0"
description = "STAG (State Transition Artifact Graph): record plans, predictions, observations, notes, and cuts as artifacts attached to state transitions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Takumi Ishida"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
kernel = [
    "torch>=2.0",
    "numpy>=1.24",
]

[project.scripts]
stag = "stag.cli.main:main"

[project.urls]
Homepage = "https://github.com/takumiecd/stag"
Repository = "https://github.com/takumiecd/stag"

[tool.hatch.build.targets.wheel]
packages = ["src/stag"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D203", "D213"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
